--- a/energia/css/remixicon.css
+++ b/energia/css/remixicon.css
@@ -12,8 +12,8 @@
   font-family: "remixicon";
   src: url('../fonts/remixicon.eot'); /* IE9*/
   src: url('../fonts/remixicon.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url("../fonts/remixicon.woff2") format("woff2"),
-  url("../fonts/remixicon.woff") format("woff"),
+  url("/fonts/remixicon.woff2") format("woff2"),
+  url("/fonts/remixicon.woff") format("woff"),
   url('../fonts/remixicon.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
   url('../images/remixicon.svg#remixicon') format('svg'); /* iOS 4.1- */
   font-display: swap;
